[project]
name = "pdm-test-2"
version = "0.1.0"
description = ""
authors = [
    {name = "Tim Richards", email = "richards@cs.umass.edu"},
]
dependencies = [
    "requests~=2.26",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
doit = {cmd = "python doit.py"}
shell = {cmd = "python"}